Fix contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -139,6 +139,7 @@ h3 {
     font-size: 3rem;
     cursor: pointer;
     font-size: 2rem;
+    background-color: #fff;
 }
 
 body.dark-mode {
